--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "pigeon-maps": "^0.21.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
