--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.17",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
