--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.11.0",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
