--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
+    "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "pigeon-maps": "^0.21.5",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
