--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.11.0",
     "swiper": "^11.1.1"
