--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.11.0",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "yet-another-react-lightbox": "^3.19.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
